[tool.poetry]
name = "mrmonitor"
version = "0.1.0"
description = "Monitor your MRs on Gitlab"
authors = ["staticf0x <44530786+staticf0x@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "^3.12"
python-dotenv = "^0.21"
rich = "^13.1"
arrow = "^1.2"
click = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
